force-app/main/default/src/objects/HealthCloudGA__Program__c/HealthCloudGA__Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>