force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__Rate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Rate__c</fullName>
    <description>Indicates the reimbursement for the measurement period for a single patient for the specific program (example: Medicare CCM program).</description>
    <inlineHelpText>Indicates the reimbursement for the measurement period for a single patient for the specific program (example: Medicare CCM program).</inlineHelpText>
    <label>Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>