force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__ReportName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReportName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>