force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__StartDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StartDate__c</fullName>
    <description>Date the program begins for the entire organization.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the program begins for the entire organization.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>