force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__Target__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Target__c</fullName>
    <description>Target time to be completed per patient for the measurement period.</description>
    <inlineHelpText>Target time to be completed per patient for the measurement period.</inlineHelpText>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>