force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__TimeSpan__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TimeSpan__c</fullName>
    <description>Measurement period.</description>
    <inlineHelpText>Measurement period.</inlineHelpText>
    <label>Time Span</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>