force-app/main/default/src/objects/HealthCloudGA__Program__c/fields/HealthCloudGA__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__UnitOfMeasure__c</fullName>
    <description>Unit of measurement for time to be completed per patient in the measurement period (goes with the “Target” field).</description>
    <inlineHelpText>Unit of measurement for time to be completed per patient in the measurement period (goes with the “Target” field).</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seconds</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>