force-app/main/default/src/objects/HealthCloudGA__Program__c/recordTypes/HealthCloudGA__ChronicCareManagement.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__ChronicCareManagement</fullName>
    <active>true</active>
    <label>Chronic Care Management</label>
</RecordType>