force-app/main/default/src/objects/HealthCloudGA__Program__c/recordTypes/HealthCloudGA__CMSRiskScoring.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__CMSRiskScoring</fullName>
    <active>true</active>
    <label>CMS Risk Scoring</label>
</RecordType>